--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-nextcord~=2.3.2
+nextcord==2.4.1
 colorama~=0.4.6
 mysql-connector-python~=8.0.32
 requests~=2.28.2
@@ -6,3 +6,4 @@ gTTS~=2.3.1
 langdetect~=1.0.9
 colorthief~=0.2.1
 Pillow~=9.4.0
+schedule~=1.1.0
