main-classes refactored

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ mysql-connector-python~=8.0.32
 requests~=2.28.2
 gTTS~=2.3.1
 langdetect~=1.0.9
-colorthief~=0.2.1
 Pillow~=9.4.0
 schedule~=1.1.0
+enchant~=0.0.1
+pyenchant~=3.2.2
