--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-nextcord==2.4.1
-colorama~=0.4.6
-mysql-connector-python~=8.0.32
-requests~=2.28.2
-gTTS~=2.3.1
-langdetect~=1.0.9
-Pillow~=9.4.0
-schedule~=1.1.0
+peewee~=3.16.0
 enchant~=0.0.1
 pyenchant~=3.2.2
+Pillow~=9.4.0
+nextcord~=2.4.1
+colorama~=0.4.6
+gTTS~=2.3.1
+langdetect~=1.0.9
+requests~=2.28.2
+schedule~=1.1.0
