--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
 peewee~=3.16.0
-enchant~=0.0.1
-pyenchant~=3.2.2
 Pillow~=9.4.0
 nextcord~=2.4.1
 colorama~=0.4.6
@@ -10,3 +8,4 @@ requests~=2.28.2
 schedule~=1.1.0
 yt_dlp==2023.3.4
 youtube-search-python~=1.6.6
+pyenchant==3.2.2
