--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-peewee~=3.16.0
-Pillow~=9.4.0
-nextcord[voice]~=2.4.1
+peewee>=3.16.3
+Pillow>=10.0.0
+nextcord[voice]>=2.5.0
 colorama~=0.4.6
-gTTS~=2.3.1
+gTTS>=2.3.2
 langdetect~=1.0.9
-requests~=2.28.2
-schedule~=1.1.0
-yt_dlp==2023.3.4
+requests>=2.31.0
+schedule>=1.2.0
+yt_dlp>=2023.7.6
 youtube-search-python~=1.6.6
-pyenchant==3.2.2
+pyenchant>=3.2.2
